        Timetable: added a search field in 'Manage Bookings' and 'Mange Facility Changes'
        User Admin: added a backup table to store person images from previous years
        User Admin: added Sibling as option to Emergency Relationship select
        User Admin: added Prof. as an option in Title select

    Bug Fixes
        System: fixed toggle field direction for right-to-left languages
        System: fixed uninitialized variable PHP warnings on Parent Dashboard
        System: fixed login options not working when using SSO button
        System: fixed login redirect after public registration
        System: fixed redirect logic in Payment class causing unnecessary error logs
        Activities: fixed Manage Enrolment when participants are part of more than one activity
        Activities: fixed the Activities tab on the parent dashboard to work with new activities system
        Data Updater: fixed attachments being cleared when new data updates are submitted
        Library: fixed handling of SQL values in Library Browse page
        Messenger: fixed missing From address on emails when using the Add Recipient action in Send Report
        Planner: fixed Teacher Notes in smart blocks not visible when using the Show Confidential Data toggle
        Planner: fixed access to class list in Edit Unit when viewing past and upcoming years
        Rubrics: fixed the bug preventing to view ATL Rubrics table on mobile devices
        Staff: fixed coverage longer than one week not including staff duty and activity cover
        Staff: fixed order of Staff Directory to honour the biographicalGroupingOrder setting
        Staff: fixed missing staff name for general coverage in Daily Coverage Planner
        Students: updated default value for longTermMedication to N for new medical records
        Students: fixed sidebar links for custom modules when viewing Student Profiles for left students