@@ -69,6 +69,7 @@ v30.0.00
         User Admin: added a backup table to store person images from previous years
         User Admin: added Sibling as option to Emergency Relationship select
         User Admin: added Prof. as an option in Title select
+        User Admin: added an option to view User Image of previous years
 
     Bug Fixes
         System: fixed toggle field direction for right-to-left languages
